@@ -1,5 +1,16 @@
 == Version 2.7.6 Work in progress (not released -- this is a draft) ==
 
+  TODO: compile .po (creme_core)
+
+  Developers side :
+  -----------------
+
+    Non breaking changes :
+    ----------------------
+        # The base class view 'creme_core.views.generic.delete.CremeModelDeletion' now manages
+          exception with type 'creme_core.core.exceptions.SpecificProtectedError'.
+          It will display a better error message if the method 'delete()' of a model raises one.
+
 
 == Version 2.7.5 ==
 
